--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.12",
+    "axios": "^0.21.0",
     "babel-plugin-styled-components": "^1.11.1",
     "grommet": "^2.15.2",
     "grommet-icons": "^4.5.0",
@@ -16,6 +20,7 @@
     "next-plugin-transpile-modules": "^2.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-feather": "^2.0.8",
     "styled-components": "^5.2.1"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
