--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "10.0.1",
     "next-auth": "^3.1.0",
     "next-plugin-transpile-modules": "^2.0.0",
+    "parse-duration": "^0.4.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-feather": "^2.0.8",
