--- a/package.json
+++ b/package.json
@@ -8,22 +8,22 @@
     "start": "next start"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-brands-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.12",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "axios": "^0.21.1",
-    "babel-plugin-styled-components": "^1.11.1",
-    "formik": "^2.2.3",
+    "babel-plugin-styled-components": "^1.12.0",
+    "formik": "^2.2.6",
     "grommet": "https://github.com/grommet/grommet/tarball/stable",
     "grommet-icons": "^4.5.0",
-    "moment-timezone": "^0.5.31",
-    "next": "10.0.1",
-    "next-auth": "^3.1.0",
+    "moment-timezone": "^0.5.33",
+    "next": "^10.0.6",
+    "next-auth": "^3.3.0",
     "next-plugin-transpile-modules": "^2.0.0",
     "parse-duration": "^0.4.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-feather": "^2.0.8",
+    "react-feather": "^2.0.9",
     "styled-components": "^5.2.1"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
