--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-brands-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "animate.css": "^4.1.1",
     "axios": "^0.21.1",
     "babel-plugin-styled-components": "^1.12.0",
     "formik": "^2.2.6",
@@ -24,6 +25,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-feather": "^2.0.9",
+    "react-notifications-component": "^3.0.3",
+    "socket.io-client": "^3.1.1",
     "styled-components": "^5.2.1"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
