--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "axios": "^0.21.1",
     "babel-plugin-styled-components": "^1.12.0",
     "formik": "^2.2.6",
-    "grommet": "https://github.com/grommet/grommet/tarball/stable",
+    "grommet": "^2.16.3",
     "grommet-icons": "^4.5.0",
     "moment-timezone": "^0.5.33",
     "next": "^10.0.6",
