--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-brands-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@sentry/browser": "^6.1.0",
+    "@sentry/node": "^6.1.0",
+    "@sentry/webpack-plugin": "^1.14.0",
     "animate.css": "^4.1.1",
     "axios": "^0.21.1",
     "babel-plugin-styled-components": "^1.12.0",
