--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@sentry/browser": "^6.1.0",
     "@sentry/node": "^6.1.0",
+    "@sentry/tracing": "^6.1.0",
     "@sentry/webpack-plugin": "^1.14.0",
     "animate.css": "^4.1.1",
     "axios": "^0.21.1",
